--- a/map_server/config/warehouse_map_sim.yaml
+++ b/map_server/config/warehouse_map_sim.yaml
@@ -1,7 +1,7 @@
-image: warehouse_map_sim.yaml.pgm
+image: warehouse_map_sim.pgm
 mode: trinary
 resolution: 0.05
-origin: [-2.5, -5.02, 0]
+origin: [-0.965, -4.26, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.25
