--- a/path_planner_server/config/bt.yaml
+++ b/path_planner_server/config/bt.yaml
@@ -2,7 +2,7 @@ bt_navigator:
   ros__parameters:
     use_sim_time: True
     global_frame: map
-    robot_base_frame: base_link
+    robot_base_frame: robot_base_footprint
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
