--- a/path_planner_server/config/recovery.yaml
+++ b/path_planner_server/config/recovery.yaml
@@ -10,8 +10,8 @@ recoveries_server:
       plugin: "nav2_recoveries/BackUp"
     wait:
       plugin: "nav2_recoveries/Wait"
-    global_frame: odom
-    robot_base_frame: base_link
+    global_frame: robot_odom
+    robot_base_frame: robot_base_footprint
     transform_timeout: 0.1
     use_sim_time: true
     simulate_ahead_time: 2.0
