--- a/localization_server/config/amcl_config.yaml
+++ b/localization_server/config/amcl_config.yaml
@@ -6,7 +6,8 @@ amcl:
     alpha3: 0.2
     alpha4: 0.2
     alpha5: 0.2
-    base_frame_id: "robot_base_footprint"
+    base_frame_id: "robot_odom"
+    tf_buffer_length: 10.0  # Increase the buffer length as needed
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
