--- a/map_server/config/warehouse_map3.yaml.yaml
+++ b/map_server/config/warehouse_map3.yaml.yaml
@@ -1,7 +1,7 @@
-image: turtlebot_area.pgm
+image: warehouse_map3.yaml.pgm
 mode: trinary
 resolution: 0.05
-origin: [-0.965, -4.26, 0]
+origin: [-4.3, -1.95, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.25
