--- a/path_planner_server/config/planner_server.yaml
+++ b/path_planner_server/config/planner_server.yaml
@@ -43,3 +43,20 @@ global_costmap:
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       always_send_full_costmap: True
+      filters: ["keepout_filter"]
+      keepout_filter:
+        plugin: "nav2_costmap_2d::KeepoutFilter"
+        enabled: True
+        filter_info_topic: "/costmap_filter_info"
+        transform_tolerance: 0.1
+
+local_costmap:
+  local_costmap:
+    ros__parameters:
+      plugins: ["voxel_layer", "inflation_layer"]
+      filters: ["keepout_filter"]
+    
+      keepout_filter:
+        plugin: "nav2_costmap_2d::KeepoutFilter"
+        enabled: True
+        filter_info_topic: "/costmap_filter_info"
